# Capturing-_depth_image_Kinect-v2_Linux

./: CMakeLists.txt  README.md  test.cpp
